--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="freepik__adjust__95506.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="freepik__adjust__95506.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="freepik__adjust__95506.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images\avatars\freepik__background__57049.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images\avatars\freepik__background__57049.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images\avatars\freepik__background__57049.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -96,14 +96,14 @@
                             I am Nik Mohamad Hanif Fakhruddin, <br>
                             a Software Developer (Frontend) <br>
                             & Ui Ux Designer <br>
-                            developer based <br>
-                            in Somewhere.
+                            working on creating <br>
+                            seamless digital experiences. <br>
                         </h1>
                     </div>
 
                     <ul class="intro-social">
                         <li><a href="https://www.linkedin.com/in/nikmohamadhanif">Linkedin</a></li>
-                        <li><a href="#0">Twitter</a></li>
+                        <li><a href="">Twitter</a></li>
                         <li><a href="https://www.facebook.com/putera.haniffakhruddin">Facebook</a></li>
                         <li><a href="https://www.instagram.com/nick_hanif00/">Instagram</a></li>
                     </ul>
@@ -141,13 +141,13 @@
                                 About Me
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi! I'm Nik Mohamad Hanif Fakhruddin bin Mohamed Ghazali, a passionate Software Engineer
-                                and UI/UX Designer. I
-                                specialize in frontend development and design, crafting intuitive digital experiences
-                                with a keen eye for aesthetics and
-                                functionality. Enthusiastic about Human-Computer Interaction (HCI), user-centered
-                                design, and prototyping, I strive to
-                                create seamless and engaging user experiences.
+                                Hi! I'm Nik Mohamad Hanif Fakhruddin bin Mohamed Ghazali, a Software Engineer and UI/UX
+                                Designer. I specialize in
+                                frontend development and design, focusing on creating user-friendly digital experiences.
+                                I have experience in WordPress
+                                (1 year), Figma (2 years), and Adobe Creative Suite (2 years). I’m ready to apply my
+                                skills and work on real projects to
+                                build effective and engaging user experiences.
                             </p>
                             <a href="https://drive.google.com/drive/folders/1Enns5qYzwFKjF4sJRrZz2bq9fV0jdtbo?usp=drive_link"
                                 class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
@@ -471,13 +471,13 @@
                     -------------------------------------------- -->
                     <div id="modal-01" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\screencapture-koprojaya-my-2025-02-13-12_48_25.png" alt="">
+                            <img src="images\portfolio\koprojaya1.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>Koprojaya Website</h5>
-                                <p>-Designed and developed a business-oriented website.
-                                    -Implemented structured navigation for easy access to services.
-                                    -Enhanced visual aesthetics for a professional look.</p>
+                                <p>Designed and developed a business-oriented website.
+                                    Implemented structured navigation for easy access to services.
+                                    Enhanced visual aesthetics for a professional look.</p>
                                 <ul class="modal-popup__cat">
                                     <li>Website</li>
                                     <li>Wordpress</li>
@@ -493,7 +493,7 @@
 
                     <div id="modal-02" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\elitexcape-destinations-2025-02-13-10_51_16.png" alt="">
+                            <img src="images\portfolio\elitexcapes.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>EliteXcape Website</h5>
@@ -513,7 +513,7 @@
 
                     <div id="modal-03" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\innopeak-test-oil-and-gas-2-2025-02-10-09_54_56.png" alt="">
+                            <img src="images\portfolio\innopeak1.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>Innopeak Website</h5>
@@ -536,8 +536,7 @@
 
                     <div id="modal-04" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\senangweb-my-demo-utl-our-gallery-2025-02-13-12_20_43.png"
-                                alt="">
+                            <img src="images\portfolio\utl13.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>UTL Website</h5>
@@ -559,7 +558,7 @@
 
                     <div id="modal-05" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\Front Booking Page.png" alt="">
+                            <img src="images\portfolio\hotel12.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>Hotel Booking System</h5>
@@ -578,7 +577,7 @@
                     <div id="modal-06" hidden>
                         <div class="modal-popup">
 
-                            <img src="images\portfolio\Paymentpage.png" alt="">
+                            <img src="images\portfolio\invoice.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>Invoice Templates & Dashboards</h5>
@@ -596,7 +595,7 @@
 
                     <div id="modal-07" hidden>
                         <div class="modal-popup">
-                            <img src="images\portfolio\iPdsdshone 14 - 75.png" alt="">
+                            <img src="images\portfolio\socaringhomepage.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>So Caring App (Figma Prototype)</h5>
@@ -727,9 +726,9 @@
                         </h2>
 
                         <p class="h1">
-                            I love to hear from you.
-                            Whether you have a question or just
-                            want to chat about design, tech & art — shoot me a message.
+                            "I appreciate hearing from you. Whether you have a question or wish to discuss design,
+                            technology, or art, please feel
+                            free to reach out to me."
                         </p>
                     </div>
                 </div> <!-- end contact-top -->
