changing new file and modified a few think

--- a/index.html
+++ b/index.html
@@ -93,19 +93,17 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Nik Mohamad Hanif Fakhruddin, <br>
-                            a Software Developer (Frontend) <br>
-                            & Ui Ux Designer <br>
-                            working on creating <br>
-                            seamless digital experiences. <br>
+                            I’m Nik Mohamad Hanif Fakhruddin, <br>
+                            Frontend Developer, UI/UX Designer,<br>
+                            Graphic Designer & Digital Marketer <br>
+                            crafting websites, interfaces, <br>
+                            and content that connect and convert.<br>
                         </h1>
                     </div>
 
                     <ul class="intro-social">
                         <li><a href="https://www.linkedin.com/in/nikmohamadhanif">Linkedin</a></li>
-                        <li><a href="">Twitter</a></li>
-                        <li><a href="https://www.facebook.com/putera.haniffakhruddin">Facebook</a></li>
-                        <li><a href="https://www.instagram.com/nick_hanif00/">Instagram</a></li>
+
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -141,16 +139,23 @@
                                 About Me
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi! I'm Nik Mohamad Hanif Fakhruddin bin Mohamed Ghazali, a Software Engineer and UI/UX
-                                Designer. I specialize in
-                                frontend development and design, focusing on creating user-friendly digital experiences.
-                                I have experience in WordPress
-                                (1 year), Figma (2 years), and Adobe Creative Suite (2 years). I’m ready to apply my
-                                skills and work on real projects to
-                                build effective and engaging user experiences.
+                                Hi! I’m Nik Mohamad Hanif Fakhruddin, a Software Engineering graduate with hands-on
+                                experience in frontend development,
+                                UI/UX design, and digital marketing.
+
+                                I work at Sabrecraft Marine as a Web Developer and Digital Marketer, where I build
+                                responsive websites, improve SEO, and
+                                manage digital branding. I previously interned at Armiena Group as a Frontend Developer
+                                and UI/UX Designer, contributing
+                                to systems used by over 1,000 users.
+
+                                As a freelancer, I’ve helped small businesses create engaging designs, websites, and
+                                visual content that enhance their
+                                digital presence. I’m passionate about clean design, performance, and building
+                                user-centered solutions that make an impact.
                             </p>
                             <a href="https://drive.google.com/drive/folders/1Enns5qYzwFKjF4sJRrZz2bq9fV0jdtbo?usp=drive_link"
-                                class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                                class="btn btn--medium u-fullwidth" data-animate-el>Download Resume</a>
 
                         </div>
                     </div>
@@ -168,6 +173,7 @@
                             <li>Backend & CMS</li>
                             <li>System Integration</li>
                             <li>Branding & Graphic Design</li>
+                            <li>Digital marketing Executive</li>
                         </ul>
 
                     </div>
@@ -182,6 +188,27 @@
                         </h2>
 
                         <div class="timeline" data-animate-el>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Sabrecraft Marine Sdn. Bhd.</h3>
+                                        <h5 class="timeline__meta">Web Developer, Graphic Designer & Digital Marketing
+                                            Executive
+                                        </h5>
+                                        <p class="timeline__timeframe">March 2025 – Present
+                                        </p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>I develop and maintain corporate websites, ensuring smooth user experiences and
+                                        strong SEO performance. My role also
+                                        involves managing digital marketing efforts, designing promotional materials,
+                                        optimizing social media engagement, and
+                                        enhancing brand visibility. Additionally, I capture high quality photography for
+                                        advertisements and contribute to
+                                        creative projects that strengthen the company’s online presence.</p>
+                                </div>
+                            </div>
 
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
@@ -238,7 +265,7 @@
                                         <p class="timeline__timeframe">March 2021</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>📍GPA: 3.26/4.00,
+                                    <p>📍GPA: 3.33/4.00,
                                         📍 Dean’s List: 2023, 2024,
                                         📍 Relevant Courses: Software Design, Software Testing, HCI, Computer Networks
                                     </p>
@@ -462,6 +489,60 @@
                                 </a>
                             </li> <!--end folio-list__item -->
 
+                            <li class="folio-list__item column" data-animate-el>
+                                <a class="folio-list__item-link" href="#modal-08">
+                                    <div class="folio-list__item-pic">
+                                        <img src="images/portfolio/sabrecraftfull.png"
+                                            srcset="images/portfolio/sabrecraftfull.png 1x, images/portfolio/sabrecraftfull.png 2x"
+                                            alt="">
+                                    </div>
+
+                                    <div class="folio-list__item-text">
+                                        <div class="folio-list__item-cat">
+                                            Sabrecraft Marine Website
+                                        </div>
+                                        <div class="folio-list__item-title">
+                                            Developed and maintained the corporate website for Sabrecraft Marine.
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="folio-list__proj-link" href="#" title="project link">
+                                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                                            fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+                                    </svg>
+                                </a>
+                            </li><!--end folio-list__item -->
+
+                            <li class="folio-list__item column" data-animate-el>
+                                <a class="folio-list__item-link" href="#modal-09">
+                                    <div class="folio-list__item-pic">
+                                        <img src="images/portfolio/stalwartmarinefull.png"
+                                            srcset="images/portfolio/stalwartmarinefull.png 1x, images/portfolio/stalwartmarinefull.png 2x"
+                                            alt="">
+                                    </div>
+
+                                    <div class="folio-list__item-text">
+                                        <div class="folio-list__item-cat">
+                                            Stalwart Marine Website
+                                        </div>
+                                        <div class="folio-list__item-title">
+                                            Designed and managed the corporate website for Stalwart Marine.
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="folio-list__proj-link" href="#" title="project link">
+                                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                                            fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+                                    </svg>
+                                </a>
+                            </li><!--end folio-list__item -->
+
                         </ul> <!-- end folio-list -->
 
                     </div> <!-- end column -->
@@ -616,6 +697,50 @@
                         </div>
                     </div> <!-- end modal -->
 
+                    <div id="modal-08" hidden>
+                        <div class="modal-popup">
+                            <img src="images/portfolio/sabrecraftshort.png" alt="">
+
+                            <div class="modal-popup__desc">
+                                <h5>Sabrecraft Marine Website</h5>
+                                <p>Developed and maintained a responsive corporate website for Sabrecraft Marine.
+                                    Improved website SEO performance and user experience.
+                                    Integrated advertisement listings for product promotions and sales.</p>
+                                <ul class="modal-popup__cat">
+                                    <li>Web Development</li>
+                                    <li>SEO Optimization</li>
+                                    <li>Responsive Design</li>
+                                    <li>WordPress</li>
+                                </ul>
+                            </div>
+
+                            <a href="https://sabrecraftmarine.com/" class="modal-popup__details">Project Website
+                                Link</a>
+                        </div>
+                    </div>
+                    <!-- end modal -->
+
+                    <div id="modal-09" hidden>
+                        <div class="modal-popup">
+                            <img src="images/portfolio/stalwartshort.png" alt="">
+
+                            <div class="modal-popup__desc">
+                                <h5>Stalwart Marine Website</h5>
+                                <p>Designed and maintained a functional corporate website for Stalwart Marine.
+                                    Updated content, refined branding elements, and enhanced user experience.</p>
+                                <ul class="modal-popup__cat">
+                                    <li>Web Design</li>
+                                    <li>UI/UX Enhancements</li>
+                                    <li>Branding</li>
+                                    <li>WordPress</li>
+                                </ul>
+                            </div>
+
+                            <a href="https://stalwartmarine.com/" class="modal-popup__details">Project Website Link</a>
+                        </div>
+                    </div>
+
+
                 </div> <!-- end works-portfolio -->
 
 
@@ -726,9 +851,9 @@
                         </h2>
 
                         <p class="h1">
-                            "I appreciate hearing from you. Whether you have a question or wish to discuss design,
-                            technology, or art, please feel
-                            free to reach out to me."
+                            "Let's connect! Whether you're curious about design, tech, or creative ideas, I’d love to
+                            chat. Got a project in mind or
+                            just want to brainstorm something awesome? Drop me a message I’m all ears!"
                         </p>
                     </div>
                 </div> <!-- end contact-top -->
@@ -744,10 +869,7 @@
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="https://www.facebook.com/putera.haniffakhruddin">Facebook</a></li>
                             <li><a href="https://www.linkedin.com/in/nikmohamadhanif">Linkedin</a></li>
-                            <li><a href="https://www.instagram.com/nick_hanif00/">Instagram</a></li>
-                            <li><a href="#0">twitter</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
