--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Nick</title>
+    <title>zai</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -57,14 +57,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Nick.</a></span>
+                <span class="mobile-home-link"><a href="index.html">zai.</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Nick.</a></li>
+                        <li><a href="index.html" class="home-link">zai.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -93,7 +93,7 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I’m Nik Mohamad Hanif Fakhruddin, <br>
+                            I’m khalid, <br>
                             Frontend Developer, UI/UX Designer,<br>
                             Graphic Designer & Digital Marketer <br>
                             crafting websites, interfaces, <br>
@@ -127,8 +127,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images\Userprofile.jpeg"
-                            srcset="images\Userprofile.jpeg 1x, images\Userprofile.jpeg 2x" alt=""
+                        <img src="images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png"
+                            srcset="images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png 1x,images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png 2x" alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
@@ -139,7 +139,7 @@
                                 About Me
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi! I’m Nik Mohamad Hanif Fakhruddin, a Software Engineering graduate with hands-on
+                                Hi! I’m khalid, a Software Engineering graduate with hands-on
                                 experience in frontend development,
                                 UI/UX design, and digital marketing.
 
@@ -763,7 +763,7 @@
                                         </cite>
                                     </div>
                                     <p>
-                                        "Hanif is a highly skilled frontend developer with an eye for design. His work
+                                        "khalid is a highly skilled frontend developer with an eye for design. His work
                                         on Koprojaya was outstanding, and his
                                         form builder system helped streamline our workflow. Highly recommended!"
                                     </p>
@@ -774,7 +774,7 @@
                                         <img src="images\avatars\zai.png" alt="Author image"
                                             class="testimonial-slider__avatar">
                                         <cite class="testimonial-slider__cite">
-                                            <strong>Zainuddin Hazin</strong>
+                                            <strong>nick</strong>
                                             <span>Full Stack Developer, Armiena Group</span>
                                         </cite>
                                     </div>
@@ -809,7 +809,7 @@
                                         </cite>
                                     </div>
                                     <p>
-                                        "We entrusted Hanif with our website, and he delivered beyond expectations. His
+                                        "We entrusted khalid with our website, and he delivered beyond expectations. His
                                         designs are modern, intuitive, and
                                         user-friendly."
                                     </p>
@@ -825,7 +825,7 @@
                                         </cite>
                                     </div>
                                     <p>
-                                        " Hanif designed were clean, modern, and easy to use. A game-changer for our NGO
+                                        "Khalid designed were clean, modern, and easy to use. A game-changer for our NGO
                                         business!"
                                     </p>
                                 </div> <!-- end testimonial-slider__slide -->
@@ -864,8 +864,8 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:hanif000609@gmail.com" class="mailtoui">hanif000609@gmail.com</a> <br>
-                            <a href="tel:+60 135007974">+60 135007974</a>
+                            <a href="mailto:hanif000609@gmail.com" class="mailtoui">zanudinhazin@gmail.com</a> <br>
+                            <a href="tel:+60 135007974">+60 135507676</a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
@@ -892,10 +892,9 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Nick 2025</span>
+                    <span>© Copyright khalid 2025</span>
                     <span>Design by <a
-                            href="https://drive.google.com/drive/folders/1pFAE9qyG5YAPlWLDTRh6zM7Gv7aLE1Ll?usp=drive_link">Nik
-                            Mohamad Hanif</a></span>
+                            href="https://drive.google.com/drive/folders/1pFAE9qyG5YAPlWLDTRh6zM7Gv7aLE1Ll?usp=drive_link">Canlaa Enterprise</a></span>
                 </div>
 
                 <div class="ss-go-top">
