--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png"
-                            srcset="images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png 1x,images\ChatGPT Image Jul 16, 2025, 03_12_23 AM.png 2x" alt=""
+                        <img src="images/kontolprofile.png"
+                            srcset="images/kontolprofile.png 1x,images/kontolprofile.png 2x" alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
