--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:hanif000609@gmail.com" class="mailtoui">zanudinhazin@gmail.com</a> <br>
+                            <a href="mailto:hanif000609@gmail.com" class="mailtoui">khalid@gmail.com</a> <br>
                             <a href="tel:+60 135007974">+60 135507676</a>
                         </p>
                     </div>
